@@ -1,3 +1,8 @@
+2002-08-20  Ross Burton  <ross@burtonini.com>
+ 
+	* yelp.desktop.in: 
+	- Fix the desktop file so that it validates correctly.
+
 2002-08-20  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-toc.c (toc_page_end): removed a new line before
